update with similar model

--- a/model1.ipynb
+++ b/model1.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "bfd07e45",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
     "        ind_df = population_dfs[i][j].copy()\n",
     "        ind_df['Windowed Encoding'] = ind_df.apply(lambda x: x['One Hot Encoding'][350-int(window_size/2):353+int(window_size/2)], axis=1)\n",
     "        ind_df['Windowed Seq'] = ind_df.apply(lambda x: x['Sequence'][350-int(window_size/2):353+int(window_size/2)], axis=1)\n",
-    "        model_dfs[i][j] = ind_df"
+    "        model_dfs[i][j] = ind_df\n"
    ]
   },
   {
