--- a/model1.ipynb
+++ b/model1.ipynb
@@ -3998,7 +3998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "c994e53b",
    "metadata": {},
    "outputs": [
@@ -4015,17 +4015,12 @@
    ],
    "source": [
     "fpr3, tpr3, roc_thresholds1 = roc_curve(test_df['Binary Label'].tolist(), test_df['pred'].tolist())\n",
-    "#plt.close()\n",
     "fig, ax = plt.subplots(nrows=1, ncols=1)  # create figure & 1 axis\n",
     "ax.plot(fpr3, tpr3, label = 'Test AUROC: '+str(round(auc(fpr3, tpr3), 3)), color='black')\n",
-    "#plt.title('Receiver-Operator Characteristic Curve: Strongest Putative Initiation Sites')\n",
-    "#plt.ylabel('True Positive Rate')\n",
-    "#plt.xlabel('False Positive Rate')\n",
     "plt.legend(loc='lower right')\n",
     "ax.spines['right'].set_visible(False)\n",
     "ax.spines['top'].set_visible(False)\n",
-    "plt.show()\n",
-    "#plt.savefig(\"roc_curve.png\")"
+    "plt.show()"
    ]
   }
  ],
